syntax = "proto3";


package assignment5;

option go_package = "./proto";


service AuctionService {
    rpc Bid(BidRequest) returns (Ack) {}
    rpc GetResult(RequestResult) returns (Result) {}
    rpc ExecuteElection(Status) returns (Ack) {}
}

message BidRequest {
    int32 id = 1;
    int32 amount = 2;
    bool coordinator = 3;
}

message Ack { }

message Result {
    string result = 1;
}

message Status {
    int32 serverId = 1;
}

message RequestResult { }

